# product-recommender-ml

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
scripts/: validate_env.py
src/recommender_system/: __init__.py
src/recommender_system/config/: settings.py
src/recommender_system/data/: __init__.py  interfaces.py  preprocessing.py
src/recommender_system/evaluation/: __init__.py  metrics.py
src/recommender_system/models/: __init__.py  baselines.py  factory.py  interfaces.py
tests/: test_environment.py  test_model_factory.py  test_preprocessing_strategy.py  test_project_structure.py  test_settings.py
