[tool.poetry]
name = "ecommerce-recommender-system"
version = "0.1.0"
description = "Reproducible e-commerce product recommender system built with PyTorch and Scikit-Learn."
authors = ["Tech Challenge Team <tech-challenge@example.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "recommender_system", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.1"
typer = "^0.12.3"
torch = {version = "^2.13.0+cpu", source = "pytorch-cpu"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.7"
pre-commit = "^3.8.0"
mypy = "^1.11.1"
pandas-stubs = "^2.2.2.240807"

[tool.poetry.group.mlops]
optional = true

[tool.poetry.group.mlops.dependencies]
mlflow = "^2.15.1"
dvc = "^3.55.2"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "D100",
  "D104",
  "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
packages = ["recommender_system"]
strict = true
warn_return_any = true
warn_unused_configs = true
pretty = true
